[package]
name = "manjoo"
version = "0.1.0"
edition = "2021"
description = "Memorial for my pet guinea pig Manjoo."
license = "MIT"
repository = "https://github.com/vkhinvasara/manjoo"

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets", "palette", "termwiz"] }

[[bin]]
name = "manjoo"
path = "src/main.rs"